name:                 reactive-hangman
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Frantisek Kocun
maintainer:           frantisek.kocun@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable reactive-hangman
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, streaming, mtl, HTTP
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is:             Tests.hs
  -- other-modules:       
  build-depends:       base >=4.8 && < 5, streaming, mtl, HTTP, tasty >=0.11 && <0.12, tasty-hunit >=0.9 && <0.10
  hs-source-dirs:      src, test
  default-language:    Haskell2010
